--- a/CourseRepo/Python-for-Data-Visualization/Seaborn/Style and Color.ipynb
+++ b/CourseRepo/Python-for-Data-Visualization/Seaborn/Style and Color.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -202,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -355,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
